--- a/linuxinfo/index.html
+++ b/linuxinfo/index.html
@@ -132,10 +132,20 @@ body, html {
 <div class="w3-container">
   <div class="w3-content" style="max-width:700px">
     <h5 class="w3-center w3-padding-64"><span class="w3-tag w3-wide">What is Linux?</span></h5>
-    <p>Over 6+ years Experienced in Linux with a demonstrated history of working in the information technology and services industry. Responsible for maintaining the health, integrity, availability, and security of all the Linux os systems globally. Apply appropriate problem solving techniques to solve complex production problems and assist with the root cause analysis. Work in a team environment to deploy solution with my knowledge.</p>
-    <p>In addition to install and configure solutions, implement reusable components, translate technical requirements, assist with all stages of test data, develop interface stubs and simulators and perform script maintenance and updates.</p>
+    <p>Linux is the best-known and most-used open source operating system. As an operating system, Linux is software that sits underneath all of the other software on a computer, receiving requests from those programs and relaying these requests to the computer’s hardware.</p>
+    <p>For the purposes of this page, we use the term “Linux” to refer to the Linux kernel, but also the set of programs, tools, and services that are typically bundled together with the Linux kernel to provide all of the necessary components of a fully functional operating system. Some people, particularly members of the Free Software Foundation, refer to this collection as GNU/Linux, because many of the tools included are GNU components. However, not all Linux installations use GNU components as a part of their operating system. Android, for example, uses a Linux kernel but relies very little on GNU tools.</p>
+    <h5 class="w3-center w3-padding-64"><span class="w3-tag w3-wide">Why to use Linux?</span></h5>
+      <p>In most of the answers you will hear the words, “Free, freedom, etc.”
+Linux is certainly free monetarily. You can download and run any distro without giving a single dime to any of the people; who’s work you’re benefiting from.
+
+Then again, it is the choice of the developer to release his/her work for free.
+
+So, one of the benefits is that you can a working system for absolutely free; provided you have the hardware ready. You pretty much don’t have to be worried about not being able to get anything on a Linux system. At one point, Linux seemed to be just for geeks, hobbyists and developers.
+Right now, even a standard user can get his work done; provided all he/she needs is a browser, email, word processing, spreadsheets, basic image manipulation, calendar, etc. There are viable alternatives for pretty much everything. But notice I said ‘alternatives” and not “replacements”.</p>
+    <h5 class="w3-center w3-padding-64"><span class="w3-tag w3-wide">What is the difference between Unix and Linux?</span></h5>
+    <p>You may have heard of Unix, which is an operating system developed in the 1970s at Bell Labs by Ken Thompson, Dennis Ritchie, and others. Unix and Linux are similar in many ways, and in fact, Linux was originally created to be similar to Unix. Both have similar tools for interfacing with the systems, programming tools, filesystem layouts, and other key components. However, Unix is not free. Over the years, a number of different operating systems have been created that attempted to be “unix-like” or “unix-compatible,” but Linux has been the most successful, far surpassing its predecessors in popularity.<p>
     <div class="w3-panel w3-leftbar w3-light-grey">
-      <p><i>"If you have knowledge, let others light their candles in it." ~ Margaret Fuller</i></p>
+      <p><i>"That's what makes Linux so good: you put in something, and that effort multiplies. It's a positive feedback cycle.." ~ linus torvalds</i></p>
     </div>
   </div>
 </div>
