--- a/linuxinfo/index.html
+++ b/linuxinfo/index.html
@@ -81,7 +81,7 @@ body, html {
         <i class="fa fa-caret-down"></i>
      </button>
      <div class="dropdown-content">
-      <a href="http://linuxhero.tk/linuxinfo/">What is Linux?</a>
+      <a href="http://linuxhero.tk/linuxinfo/">Linux Introduction?</a>
       <a href="https://mail.google.com/mail/u/0/#inbox">Linux Commands</a>
       <a href="#">Link 3</a>
      </div>
@@ -132,6 +132,7 @@ body, html {
 <div class="w3-container">
   <div class="w3-content" style="max-width:700px">
     <h5 class="w3-center w3-padding-64"><span class="w3-tag w3-wide">What is Linux?</span></h5>
+    <img src="/linux.jpg" alt="Flowers in Chania" width="460" height="345">
     <p>Linux is the best-known and most-used open source operating system. As an operating system, Linux is software that sits underneath all of the other software on a computer, receiving requests from those programs and relaying these requests to the computer’s hardware.</p>
     <p>For the purposes of this page, we use the term “Linux” to refer to the Linux kernel, but also the set of programs, tools, and services that are typically bundled together with the Linux kernel to provide all of the necessary components of a fully functional operating system. Some people, particularly members of the Free Software Foundation, refer to this collection as GNU/Linux, because many of the tools included are GNU components. However, not all Linux installations use GNU components as a part of their operating system. Android, for example, uses a Linux kernel but relies very little on GNU tools.</p>
     <h5 class="w3-center w3-padding-64"><span class="w3-tag w3-wide">Why to use Linux?</span></h5>
