--- a/linuxinfo/index.html
+++ b/linuxinfo/index.html
@@ -126,7 +126,10 @@ body, html {
 
 <!-- Add a background color and large text to the whole page -->
 <div class="w3-sand w3-grayscale w3-large">
-  
+  <div class="w3-container">
+  <div class="w3-content" style="max-width:700px">
+   <img src="/linux.jpg" style="width:100%;max-width:1000px" class="w3-margin-top">
+  </div>
      
 <!-- Content -->
 <div class="w3-container">
@@ -166,7 +169,7 @@ Right now, even a standard user can get his work done; provided all he/she needs
         <textarea name="comments" rows = "12" cols = "35">Send your comments to owner.</textarea>
         <br>
       <p><input type="submit" name="submit" value="Send" />
-        <form action="mailto:Mdsulemanroayl23@gmail.com" 
+        <form action="mailto:allishah2490@gmail.com" 
          enctype="text/plain" onsubmit="location.href='thanks.html';" >
         <input type="reset" name="reset" value="Clear Form" />
       </p>
