--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@ body, html {
         <textarea name="comments" rows = "12" cols = "35">Send your comments to owner.</textarea>
         <br>
       <p><input type="submit" name="submit" value="Send" />
-        <form action="mailto:Mdsulemanroayl23@gmail.com" 
+        <form action="mailto:Allishah2490@gmail.com" 
          enctype="text/plain" onsubmit="location.href='thanks.html';" >
         <input type="reset" name="reset" value="Clear Form" />
       </p>
