--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@ body, html {
         <i class="fa fa-caret-down"></i>
      </button>
      <div class="dropdown-content">
-      <a href="http://linuxhero.tk/linuxinfo">Linux Introduction?</a>
-      <a href="https://mail.google.com/mail/u/0/#inbox">Linux Commands</a>
+      <a href="http://linuxhero.tk/linuxinfo">Linux Introduction</a>
+      <a href="http://linuxhero.tk//linuxdistros">Linux Distributions</a>
       <a href="#">Link 3</a>
      </div>
     </div> 
