--- a/linuxdistros/index.html
+++ b/linuxdistros/index.html
@@ -81,7 +81,7 @@ body, html {
         <i class="fa fa-caret-down"></i>
      </button>
      <div class="dropdown-content">
-      <a href="http://linuxhero.tk/linuxdistros/">Linux Introduction</a>
+      <a href="http://linuxhero.tk/linuxinfo/">Linux Introduction</a>
       <a href="http://linuxhero.tk/linuxdistros/">Linux Distributions</a>
       <a href="#">Link 3</a>
      </div>
