--- a/linuxinfo/index.html
+++ b/linuxinfo/index.html
@@ -82,7 +82,7 @@ body, html {
      </button>
      <div class="dropdown-content">
       <a href="http://linuxhero.tk/linuxinfo/">Linux Introduction?</a>
-      <a href="https://mail.google.com/mail/u/0/#inbox">Linux Commands</a>
+      <a href="http://linuxhero.tk/linuxdistros/">Linux Distributions</a>
       <a href="#">Link 3</a>
      </div>
     </div> 
