--- a/linuxdistros/index.html
+++ b/linuxdistros/index.html
@@ -138,6 +138,7 @@ body, html {
     <p>One of the most confusing things for the newcomer to Linux is how many distributions, or versions, of the operating system there are. Ubuntu is the one most people have heard of, but there are hundreds of others as well, each offering some variant on the basic Linux theme.</p>
     <p>However, Linux comes in many different forms, known as 'flavors' or 'distros'. This is simply because Linux is so incredibly configurable that different forms tend to be developed for different userbase needs or interests.</p>
     <p>Different Linux distros can all work with Linux software and applications, and of course, any cloud-based apps that run through a browser. However, Linux distros come with a variety of different ranges of bundled software. Some might come with a lot of basic applications already pre-installed, while others will have the barest minimum.<p>
+
     <h5 class="w3-center w3-padding-64"><span class="w3-tag w3-wide">1. Ubuntu</span></h5>
       <p><i>One of the most popular distros for good reasons</i></p>
     <p>Yes, Ubuntu has become the poster child for Linux these days, and no wonder--it's the most popular distro by far, garnering more than 2,200 hits per day on the Distrowatch site alone, compared with some 1,400 for Fedora, the No. 2 contender.<p>
@@ -154,6 +155,14 @@ The current LTS version of Ubuntu uses the Gnome 3 desktop environment, which ma
     <p>Linux Mint is a great ‘default’ distro for new Linux users, as it comes with a lot of the software you’ll need when switching from Mac or Windows, such as LibreOffice, the favoured productivity suite of Linux users. It also has better support for proprietary media formats, allowing you to play videos, DVDs and MP3 music files out of the box.<p>   
     <p>Linux Mint 18.3 was the last release to have an official KDE version. Unfortunately, this is no longer available with Linux Mint 19, but it can still be installed on top of version 19 if you miss it.<p>
     
+    <h5 class="w3-center w3-padding-64"><span class="w3-tag w3-wide">3. Debian</span></h5>
+     <p><i>Debian can be downloaded over the Internet or, for a small charge, obtained on CD.</i></p>
+    <p>Dating back to 1993, Debian is currently known as one of the most well-tested and bug-free distros available today. Though it serves as the foundation for Ubuntu, most view Debian as a distro best-suited for those experienced with Linux. The distro uses all open-source components, which is a good thing, but means it can be more difficult to achieve compatibility with proprietary code such as wireless network drivers. Debian also has a relatively slow release cycle, with stable ones coming out every one to three years.<p>
+    
+    <h5 class="w3-center w3-padding-64"><span class="w3-tag w3-wide">4. CentOS</span></h5>
+     <p><i>Offshoot of Enterprise version of Red Hat Linux</i></p>
+    <p>Wikipedia defines CentOS as follows:
+“CentOS (from Community Enterprise Operating System) is a Linux distribution that provides a free, community-supported, enterprise-class, computing platform compatible with its upstream source, (RHEL) or Red Hat Enterprise Linux. In January 2014, CentOS announced the official affiliation with Red Hat while staying independent fromRed Hat Enterprise Linux, under a new CentOS governing board. The first CentOS was released in May 2004, (and numbered as CentOS version 2), was forked from Redhat (RHEL) version 2.1AS…  (The) building of CentOS 8 commenced as of May 2019.<p>   
   </div>
 </div>
 
