--- a/linuxdistros/index.html
+++ b/linuxdistros/index.html
@@ -163,6 +163,11 @@ The current LTS version of Ubuntu uses the Gnome 3 desktop environment, which ma
      <p><i>Offshoot of Enterprise version of Red Hat Linux</i></p>
     <p>Wikipedia defines CentOS as follows:
 “CentOS (from Community Enterprise Operating System) is a Linux distribution that provides a free, community-supported, enterprise-class, computing platform compatible with its upstream source, (RHEL) or Red Hat Enterprise Linux. In January 2014, CentOS announced the official affiliation with Red Hat while staying independent fromRed Hat Enterprise Linux, under a new CentOS governing board. The first CentOS was released in May 2004, (and numbered as CentOS version 2), was forked from Redhat (RHEL) version 2.1AS…  (The) building of CentOS 8 commenced as of May 2019.<p>   
+ <p>CentOS is an open-source Linux distribution. Many refer to it as a replica of the Red Hat Enterprise Linux (RHEL), which is considered to be the most widely used in the corporate IT world. CentOS is an enterprise class operating system supported by the community and released back in 2004.
+
+Close similarity to RHEL gives you the luxury to develop in a dominant and one of the best Linux distribution out there. One might say that this already gives CentOS a lead over Ubuntu.
+
+It’s highly customizable, secure, and stable, which is also something to appreciate it for. The close link to RHEL allowed CentOS to have quite a few corporate-level security updates thus making it a safe choice for every user.<p>
   </div>
 </div>
 
