--- a/linuxdistros/index.html
+++ b/linuxdistros/index.html
@@ -168,6 +168,14 @@ The current LTS version of Ubuntu uses the Gnome 3 desktop environment, which ma
 Close similarity to RHEL gives you the luxury to develop in a dominant and one of the best Linux distribution out there. One might say that this already gives CentOS a lead over Ubuntu.
 
 It’s highly customizable, secure, and stable, which is also something to appreciate it for. The close link to RHEL allowed CentOS to have quite a few corporate-level security updates thus making it a safe choice for every user.<p>
+ 
+    <h5 class="w3-center w3-padding-64"><span class="w3-tag w3-wide">5. openSUSE</span></h5>
+    <p><i>Primarily targeted at devs and sysadmins</i></p>
+    <p>The openSUSE distribution is a stable, easy to use and complete multi-purpose distribution.
+It is aimed towards users and developers working on the desktop or server. It is great for beginners, experienced users and ultra geeks alike, in short, it is perfect for everybody! The latest release, openSUSE Leap 15.1, features new and massively improved versions of all useful server and desktop applications. It comes with more than 1,000 open source applications. openSUSE Tumbleweed is the rolling release, providing the latest upstream software releases, yet only those packages that pass testing.
+
+openSUSE is also the base for SUSE's award-winning SUSE Linux Enterprise products.<p>
+  
   </div>
 </div>
 
