--- a/linuxdistros/index.html
+++ b/linuxdistros/index.html
@@ -175,7 +175,10 @@ It’s highly customizable, secure, and stable, which is also something to appre
 It is aimed towards users and developers working on the desktop or server. It is great for beginners, experienced users and ultra geeks alike, in short, it is perfect for everybody! The latest release, openSUSE Leap 15.1, features new and massively improved versions of all useful server and desktop applications. It comes with more than 1,000 open source applications. openSUSE Tumbleweed is the rolling release, providing the latest upstream software releases, yet only those packages that pass testing.
 
 openSUSE is also the base for SUSE's award-winning SUSE Linux Enterprise products.<p>
-  
+    <h5 class="w3-center w3-padding-64"><span class="w3-tag w3-wide">6. Fedora</span></h5>
+   <p><i>Red Hat, the largest Linux company and one of the biggest open-source developers in the world, makes Fedora.</i></p>
+    <p> Fedora is good for nearly anything that you'd want to do on your computer, but it's intended mostly for desktops. Fedora uses the GNOME desktop environment which provides an extremely smooth and well-integrated experience. Because it includes the latest software, you'll always have new and exciting features on your desktop by using Fedora.<p>
+    <p> Fedora also offers a six-month release schedule, and its security features are excellent. While some have viewed it as a cutting-edge distro for the Linux "hobbyist," I think improvements over the years and widespread popularity have combined to make it a good choice for newer Linux users as well.<p>
   </div>
 </div>
 
