--- a/linuxdistros/index.html
+++ b/linuxdistros/index.html
@@ -137,7 +137,7 @@ body, html {
     <h5 class="w3-center w3-padding-64"><span class="w3-tag w3-wide">What are Linux Distributions?</span></h5>
     <p>One of the most confusing things for the newcomer to Linux is how many distributions, or versions, of the operating system there are. Ubuntu is the one most people have heard of, but there are hundreds of others as well, each offering some variant on the basic Linux theme.</p>
     <p>However, Linux comes in many different forms, known as 'flavors' or 'distros'. This is simply because Linux is so incredibly configurable that different forms tend to be developed for different userbase needs or interests.</p>
-    <p>Different Linux distros can all work with Linux software and applications, and of course, any cloud-based apps that run through a browser. However, Linux distros come with a variety of different ranges of bundled software. Some might come with a lot of basic applications already pre-installed, while others will have the barest minimum.<p>
+    <p>Different Linux distros can all work with Linux software and applications, and of course, any cloud-based apps that run through a browser. However, Linux distros come with a variety of different ranges of bundled software. Some might come with a lot of basic applications already pre-installed, while others will have the barest minimum. Please find below few of them, Which are most popular.<p>
 
     <h5 class="w3-center w3-padding-64"><span class="w3-tag w3-wide">1. Red Hat</span></h5>
     <p><i>Red Hat is a leading software company in the business of assembling open source components for the Linux operating</i></p>
