--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@ body, html {
      </button>
      <div class="dropdown-content">
       <a href="http://linuxhero.tk/linuxinfo">Linux Introduction</a>
-      <a href="http://linuxhero.tk//linuxdistros">Linux Distributions</a>
-      <a href="#">Link 3</a>
+      <a href="http://linuxhero.tk/linuxdistros">Linux Distributions</a> 
+      <a href="http://linuxhero.tk/linuxcommands">Linux Distributions</a>        
      </div>
     </div> 
    <div class="dropdown">
