--- a/linuxdistros/index.html
+++ b/linuxdistros/index.html
@@ -83,6 +83,7 @@ body, html {
      <div class="dropdown-content">
       <a href="http://linuxhero.tk/linuxinfo/">Linux Introduction</a>
       <a href="http://linuxhero.tk/linuxdistros/">Linux Distributions</a>
+      <a href="http://linuxhero.tk/linuxcommands">Linux Commands</a>
       <a href="#">Link 3</a>
      </div>
     </div> 
