--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ body, html {
      <div class="dropdown-content">
       <a href="http://linuxhero.tk/linuxinfo">Linux Introduction</a>
       <a href="http://linuxhero.tk/linuxdistros">Linux Distributions</a> 
-      <a href="http://linuxhero.tk/linuxcommands">Linux Distributions</a>        
+      <a href="http://linuxhero.tk/linuxcommands">Linux Commands</a>        
      </div>
     </div> 
    <div class="dropdown">
