--- a/linuxcommands/index.html
+++ b/linuxcommands/index.html
@@ -135,7 +135,7 @@ body, html {
 <p>Although the steps may differ depending on the distribution that you’re using, usually you can find the command line in the Utilities section.<p>
 
 <p>Now that you’re all set, let’s get started, shall we?<p>
-    <p><strong>1. pwd command<hp>
+    <p><strong>1. pwd command<p>
 <p>Use the pwd command to find out the path of the current directory (folder) you’re in. The command will return an absolute (full) path, which is basically a path that starts with a forward slash (/). An example of an absolute path is /home/username.<p>
 
 <p><strong>2. cd command<p>
