--- a/linuxcommands/index.html
+++ b/linuxcommands/index.html
@@ -130,11 +130,11 @@ body, html {
   <div class="w3-container">
   <div class="w3-content" style="max-width:700px">
    <h5 class="w3-center w3-padding-64"><span class="w3-tag w3-wide">Linux Basic Commands</span></h5>
-    <p>Before we go on to the list of commands, you need to open the command line first.<p>
+    <h2>Before we go on to the list of commands, you need to open the command line first.</h2>
 
-<p>Although the steps may differ depending on the distribution that you’re using, usually you can find the command line in the Utilities section.<p>
+<h2>Although the steps may differ depending on the distribution that you’re using, usually you can find the command line in the Utilities section.</h2>
 
-<p>Now that you’re all set, let’s get started, shall we?<p>
+<h2>Now that you’re all set, let’s get started, shall we?<h2>
     <p>1. pwd command<p>
 <p>Use the pwd command to find out the path of the current directory (folder) you’re in. The command will return an absolute (full) path, which is basically a path that starts with a forward slash (/). An example of an absolute path is /home/username.<p>
 
