--- a/linuxcommands/index.html
+++ b/linuxcommands/index.html
@@ -134,7 +134,7 @@ body, html {
 
 <h2>Although the steps may differ depending on the distribution that you’re using, usually you can find the command line in the Utilities section.</h2>
 
-<h2>Now that you’re all set, let’s get started, shall we?<h2>
+<h2>Now that you’re all set, let’s get started, shall we?</h2>
     <p>1. pwd command<p>
 <p>Use the pwd command to find out the path of the current directory (folder) you’re in. The command will return an absolute (full) path, which is basically a path that starts with a forward slash (/). An example of an absolute path is /home/username.<p>
 
