--- a/nfs/index.html
+++ b/nfs/index.html
@@ -132,11 +132,12 @@ body, html {
   <div class="w3-content" style="max-width:700px">
    <h4 class="w3-center w3-padding-64"><span class="w3-tag w3-wide">Configure NFS Server</span></h4>
    <h3>I will use below example in order to Configure NFS Server to share directories on your Network.</h3>
-    <h4 class="w3-center w3-padding-64"><span class="w3-tag w3-wide">[NFS Server] 192.0.0.30<---->192.0.0.31 [NFS Client]
-    <br> server.example.com<-------------->client.example.com
+    <h4 class="w3-center w3-padding-64"><span class="w3-tag w3-wide"> [NFS Server] 192.0.0.30<---->192.0.0.31 [NFS Client]
+    <br>server.example.com<-------------->client.example.com
     </span></h4>
     <p>If Firewalld is running, please allow NFS service.<p>
-    <h4 class="w3-center w3-padding-64"><span class="w3-tag w3-wide">[root@server ~]# firewall-cmd --add-service=nfs --permanent<br>[root@server ~]# firewall-cmd --reload
+    <h4 class="w3-center w3-padding-64"><span class="w3-tag w3-wide">[root@server ~]# firewall-cmd --add-service=nfs --permanent
+    <br>[root@server ~]# firewall-cmd --reload
 </span></h4>
     
 
