--- a/nfs/index.html
+++ b/nfs/index.html
@@ -130,10 +130,10 @@ body, html {
 <div class="w3-sand w3-grayscale w3-large">
   <div class="w3-container">
   <div class="w3-content" style="max-width:700px">
-   <h4 class="w3-center w3-padding-64"><span class="w3-tag w3-wide">Configure NFS Server</span></h4>
+   <h4 class="w3-center w3-padding-100"><span class="w3-tag w3-wide">Configure NFS Server</span></h4>
    <h3>I will use below example in order to Configure NFS Server to share directories on your Network.</h3>
     <p> <span class="w3-tag w3-wide">[NFS Server] 192.0.0.30<---->192.0.0.31 [NFS Client]<p>
-      <p><span class="w3-tag w3-wide">[NFS Server] Ssserver.example.com<---->Client.example.com</span><p>
+      <p><span class="w3-tag w3-wide">server.example.com<---->Client.example.com</span><p>
       
     <p>If Firewalld is running, please allow NFS service.<p>
     <h4 class="w3-center w3-padding-64"><span class="w3-tag w3-wide">[root@server ~]# firewall-cmd --add-service=nfs --permanent
