--- a/nfs/index.html
+++ b/nfs/index.html
@@ -134,8 +134,8 @@ body, html {
 <!-- Content -->
 <div class="w3-container">
   <div class="w3-content" style="max-width:700px">
-    <h5 class="w3-center w3-padding-64"><span class="w3-tag w3-wide">Configure NFS SERVER</span></h5>
-    <h5 <span class="w3-tag w3-wide">Configure NFS Server to share directories on your Network.
+    <h3 class="w3-center w3-padding-64"><span class="w3-tag w3-wide">Configure NFS SERVER</span></h3>
+    <h5 <span class="w3-tag w3-wide">Configure NFS Server to share directories <br>on your Network.
 This example is based on the environment below.</span></h5>
    
   </div>
