--- a/nfs/index.html
+++ b/nfs/index.html
@@ -135,7 +135,7 @@ body, html {
 <div class="w3-container">
   <div class="w3-content" style="max-width:700px">
     <h3 class="w3-center w3-padding-64"><span class="w3-tag w3-wide">Configure NFS SERVER</span></h3>
-    <h5 <span class="w3-tag w3-wide">Configure NFS Server to share directories <br>on your Network.
+    <h5 <span class="w3-tag w3-wide"><br>Configure NFS Server to share directories <br>on your Network.
 This example is based on the environment below.</span></h5>
    
   </div>
