--- a/nfs/index.html
+++ b/nfs/index.html
@@ -133,10 +133,10 @@ body, html {
      
 <!-- Content -->
 <div class="w3-container">
-  <div class="w3-content" style="max-width:1000px">
+  <div class="w3-content" style="max-width:1500px">
     <h3 class="w3-center w3-padding-64"><span class="w3-tag w3-wide">Configure NFS SERVER</span></h3>
-    <h5 <span class="w3-tag w3-wide"><p>Configure NFS Server to share directories <br>onn your Network.
-This example is based <br>on the environment below.<p></span></h5>
+    <h5 <span class="w3-tag w3-wide">Configure NFS Server to share directories onn your Network.
+This example is based on the environment below.</span></h5>
    
   </div>
 </div>
