--- a/nfs/index.html
+++ b/nfs/index.html
@@ -135,8 +135,19 @@ body, html {
 <div class="w3-container">
   <div class="w3-content" style="max-width:1500px">
     <h3 class="w3-center w3-padding-64"><span class="w3-tag w3-wide">Configure NFS SERVER</span></h3>
-    <h5 <span class="w3-tag w3-wide">Configure NFS Server to share directories onn your Network.
-This example is based on the environment below.</span></h5>
+     <p><b>Configure NFS Server to share directories onn your Network.
+This example is based on the environment below.<b><p>
+    <h5 <span class="w3-tag w3-wide">[NFS Server]    |192.0.0.20 | 192.0.0.30|     [NFS Client]</span></h5>
+    <h5 <span class="w3-tag w3-wide">dlp.srv.world   <----------------------->     www.srv.world</span></h5>  
+    <h5 <span class="w3-tag w3-wide"><br>[root@server ~]# yum -y install nfs-utils
+<br>[root@server ~]# vi /etc/idmapd.conf
+<br># line 5: uncomment and change to your domain name
+<br>Domain = example.com
+<br>[root@server ~]# vi /etc/exports
+<br># write settings for NFS exports
+<br>/home 192.0.0.0/24(rw,no_root_squash)
+<br>[root@server ~]# systemctl start rpcbind nfs-server
+<br>[root@server ~]# systemctl enable rpcbind nfs-server</h5>  
    
   </div>
 </div>
