--- a/nfs/index.html
+++ b/nfs/index.html
@@ -138,9 +138,9 @@ body, html {
      <p><b>Configure NFS Server to share directories onn your Network.
 This example is based on the environment below.<b><p>
     <h5 <span class="w3-tag w3-wide">[NFS Server]    |192.0.0.20 | 192.0.0.30|     [NFS Client]</span></h5>
-    <h5 <span class="w3-tag w3-wide">dlp.srv.world   <----------------------->     www.srv.world</span></h5>  
-    <h5 <span class="w3-tag w3-wide"><br>[root@server ~]# yum -y install nfs-utils
-<br>[root@server ~]# vi /etc/idmapd.conf
+    <p> <span class="w3-tag w3-wide">dlp.srv.world   <----------------------->     www.srv.world</span><p>  
+    <p> <span class="w3-tag w3-wide"><br>[root@server ~]# yyum -y install nfs-utils<p>
+<p>[root@server ~]# vi /etc/idmapd.conf<p>
 <br># line 5: uncomment and change to your domain name
 <br>Domain = example.com
 <br>[root@server ~]# vi /etc/exports
