--- a/nfs/index.html
+++ b/nfs/index.html
@@ -139,8 +139,8 @@ body, html {
 This example is based on the environment below.<b><p>
     <h5 <span class="w3-tag w3-wide">[NFS Server]    |192.0.0.20 | 192.0.0.30|     [NFS Client]</span></h5>
     <p> <span class="w3-tag w3-wide">dlp.srv.world   <----------------------->     www.srv.world</span><p>  
-    <p> <span class="w3-tag w3-wide"><br>[root@server ~]# yyum -y install nfs-utils<p>
-<p>[root@server ~]# vi /etc/idmapd.conf<p>
+    <p> <span class="w3-tag w3-wide"><br>[root@server ~]# yum -y install nfs-utils
+<br>[root@server ~]# vii /etc/idmapd.conf
 <br># line 5: uncomment and change to your domain name
 <br>Domain = example.com
 <br>[root@server ~]# vi /etc/exports
@@ -148,7 +148,7 @@ This example is based on the environment below.<b><p>
 <br>/home 192.0.0.0/24(rw,no_root_squash)
 <br>[root@server ~]# systemctl start rpcbind nfs-server
 <br>[root@server ~]# systemctl enable rpcbind nfs-server</h5>  
-   
+  <p> 
   </div>
 </div>
 
