--- a/nfs/index.html
+++ b/nfs/index.html
@@ -139,7 +139,7 @@ body, html {
 This example is based on the environment below.<b><p>
     <h3 <span class="w3-tag w3-wide">[NFS Server]    |192.0.0.20 | 192.0.0.30|     [NFS Client]
     <br>dlp.srv.worldd   <----------------------->     www.srv.world</span></h3>  
-    <p> <span class="w3-tag w3-wide">[root@server ~]# yum -y install nfs-utils<p>
+    <p> <span class="w3-tag w3-wide">[root@server ~]# yumm -y install nfs-utils
 <br>[root@server ~]# vii /etc/idmapd.conf
 <br># line 5: uncomment and change to your domain name
 <br>Domain = example.com
@@ -147,8 +147,7 @@ This example is based on the environment below.<b><p>
 <br># write settings for NFS exports
 <br>/home 192.0.0.0/24(rw,no_root_squash)
 <br>[root@server ~]# systemctl start rpcbind nfs-server
-<br>[root@server ~]# systemctl enable rpcbind nfs-server</h5>  
-  <p> 
+<br>[root@server ~]# systemctl enable rpcbind nfs-server<p> 
   </div>
 </div>
 
