--- a/nfs/index.html
+++ b/nfs/index.html
@@ -139,15 +139,15 @@ body, html {
 This example is based on the environment below.<b><p>
     <h3 <span class="w3-tag w3-wide">[NFS Server]    |192.0.0.20 | 192.0.0.30|     [NFS Client]
     <br>dlp.srv.worldd   <----------------------->     www.srv.world</span></h3>  
-    <p> <span class="w3-tag w3-wide">[root@server ~]# yumm -y install nfs-utils
-<br>[root@server ~]# vii /etc/idmapd.conf
+    <h3 <span class="w3-tag w3-wide">[root@server ~]# yumm -y install nfs-utils
+<br>[root@server ~]# i /etc/idmapd.conf
 <br># line 5: uncomment and change to your domain name
 <br>Domain = example.com
 <br>[root@server ~]# vi /etc/exports
 <br># write settings for NFS exports
 <br>/home 192.0.0.0/24(rw,no_root_squash)
 <br>[root@server ~]# systemctl start rpcbind nfs-server
-<br>[root@server ~]# systemctl enable rpcbind nfs-server<p> 
+<br>[root@server ~]# systemctl enable rpcbind nfs-server</span></h3>
   </div>
 </div>
 
