--- a/nfs/index.html
+++ b/nfs/index.html
@@ -137,9 +137,13 @@ body, html {
     <h3 class="w3-center w3-padding-64"><span class="w3-tag w3-wide">Configure NFS SERVER</span></h3>
      <p><b>Configure NFS Server to share directories onn your Network.
 This example is based on the environment below.<b><p>
-    <h3 <span class="w3-tag w3-wide">[NFS Server]    |192.0.0.20 | 192.0.0.30|     [NFS Client]
-    <br>dlp.srv.worldd   <----------------------->     www.srv.world</span></h3>  
-    <h3 <span class="w3-tag w3-wide">[root@server ~]# yumm -y install nfs-utils
+    <pre class="w3-tag w3-wide">
+
+[NFS Server]    |192.0.0.20 | 192.0.0.30|     [NFS Client]
+dlp.srv.worldd   <----------------------->    www.srv.world  
+[root@server ~]# yumm -y install nfs-utils
+
+</pre>
 <br>[root@server ~]# i /etc/idmapd.conf
 <br># line 5: uncomment and change to your domain name
 <br>Domain = example.com
