--- a/nfs/index.html
+++ b/nfs/index.html
@@ -139,19 +139,19 @@ body, html {
 This example is based on the environment below.<b><p>
     <pre class="w3-tag w3-wide">
 
-[NFS Server]    |192.0.0.20 | 192.0.0.30|     [NFS Client]
-dlp.srv.worldd   <----------------------->    www.srv.world  
+        [NFS Server]    |192.0.0.20 | 192.0.0.30|     [NFS Client]
+        dlp.srv.worldd   <----------------------->    www.srv.world  
 [root@server ~]# yumm -y install nfs-utils
-
+[root@server ~]# i /etc/idmapd.conf
+# line 5: uncomment and change to your domain name
+Domain = example.com
+[root@server ~]# vi /etc/exports
+# write settings for NFS exports
+/home 192.0.0.0/24(rw,no_root_squash)
+[root@server ~]# systemctl start rpcbind nfs-server
+[root@server ~]# systemctl enable rpcbind nfs-server
 </pre>
-<br>[root@server ~]# i /etc/idmapd.conf
-<br># line 5: uncomment and change to your domain name
-<br>Domain = example.com
-<br>[root@server ~]# vi /etc/exports
-<br># write settings for NFS exports
-<br>/home 192.0.0.0/24(rw,no_root_squash)
-<br>[root@server ~]# systemctl start rpcbind nfs-server
-<br>[root@server ~]# systemctl enable rpcbind nfs-server</span></h3>
+
   </div>
 </div>
 
