--- a/nfs/index.html
+++ b/nfs/index.html
@@ -133,11 +133,10 @@ body, html {
      
 <!-- Content -->
 <div class="w3-container">
-  <div class="w3-content" style="max-width:3000px">
     <h3 class="w3-center w3-padding-64"><span class="w3-tag w3-wide">Configure NFS SERVER</span></h3>
      <p><b>Configure NFS Server to share directories onn your Network.
 This example is based on the environment below.<b><p>
-<pre class="w3-center w3-padding-64" class="w3-tag w3-wide">
+<pre class="w3-tag w3-wide">
 [NFS Server]    |192.0.0.20 | 192.0.0.30|     [NFS Client]
 dlp.srv.worldd   <----------------------->    www.srv.world  
 [root@server ~]# yumm -y install nfs-utils
