--- a/nfs/index.html
+++ b/nfs/index.html
@@ -137,9 +137,9 @@ body, html {
      <p><b>Configure NFS Server to share directories onn your Network.
 This example is based on the environment below.<b><p>
 <pre class="w3-tag w3-wide">
-[NFS Server]    |192.0.0.20 | 192.0.0.30|     [NFS Client]
-dlp.srv.worldd   <----------------------->    www.srv.world  
-[root@server ~]# yumm -y install nfs-utils
+<br [NFS Server]    |192.0.0.20 | 192.0.0.30|     [NFS Client]/>
+<br dlp.srv.worldd   <----------------------->    www.srv.world/>  
+<br [root@server ~]# yumm -y install nfs-util/>
 [root@server ~]# i /etc/idmapd.conf
 # line 5: uncomment and change to your domain name
 Domain = example.com
