--- a/nfs/index.html
+++ b/nfs/index.html
@@ -132,25 +132,19 @@ body, html {
   </div>
      
 <!-- Content -->
-<div class="w3-container">
-    <h3 class="w3-center w3-padding-64"><span class="w3-tag w3-wide">Configure NFS SERVER</span></h3>
-     <p><b>Configure NFS Server to share directories onn your Network.
-This example is based on the environment below.<b><p>
-<pre class="w3-tag w3-wide">
-<br [NFS Server]    |192.0.0.20 | 192.0.0.30|     [NFS Client]/>
-<br dlp.srv.worldd   <----------------------->    www.srv.world/>  
-<br [root@server ~]# yumm -y install nfs-util/>
-[root@server ~]# i /etc/idmapd.conf
-# line 5: uncomment and change to your domain name
+<div style="background-color: #cfc ; padding: 10px; border: 1px solid green;">
+Configure NFS Server to share directories onn your Network. This example is based on the environment below.
+<br> [NFS Server]    |192.0.0.20 | 192.0.0.30|     [NFS Client]
+<br> dlp.srv.worldd   <----------------------->    www.srv.world  
+<br> [root@server ~]# yumm -y install nfs-util
+<br>[root@server ~]# i /etc/idmapd.conf
+<br># line 5: uncomment and change to your domain name
 Domain = example.com
 [root@server ~]# vi /etc/exports
 # write settings for NFS exports
 /home 192.0.0.0/24(rw,no_root_squash)
 [root@server ~]# systemctl start rpcbind nfs-server
 [root@server ~]# systemctl enable rpcbind nfs-server
-</pre>
-
-  </div>
 </div>
 
 <!-- Menu Container -->
