--- a/nfs/index.html
+++ b/nfs/index.html
@@ -132,7 +132,7 @@ body, html {
   </div>
      
 <!-- Content -->
-<div style="background-color: #cfc ; padding: 10px; border: 1px green;">
+<div style="background-color: #cfc ; padding: 10px; border: 1px solid black;">
 Configure NFS Server to share directories onn your Network. This example is based on the environment below.
 <br> [NFS Server]    |192.0.0.20 | 192.0.0.30|     [NFS Client]
 <br> dlp.srv.worldd   <----------------------->    www.srv.world  
