--- a/nfs/index.html
+++ b/nfs/index.html
@@ -131,13 +131,16 @@ body, html {
 <div class="w3-container">
   <div class="w3-content" style="max-width:700px">
     <h5 class="w3-center w3-padding-64"><span class="w3-tag w3-wide">Configure NFS SERVER</span></h5>
-    <p>Configure NFS Server to share directories on your Network.
-This example is based on the environment below.<p>
+    <h5 <span class="w3-tag w3-wide">Configure NFS Server to share directories on your Network.
+This example is based on the environment below./span></h5>
+  <h5 <span class="w3-tag w3-wide">[NFS Server]         |192.0.0.20 | 192.0.0.30|        [NFS Client]/span></h5>
+  <h5 <span class="w3-tag w3-wide">Server.example.com     <--------------------->      Client.example.com/span></h5>
+ 
  </div>
 </div> 
   
 <style>
-h3 {
+h5 {
   background-color: black;
   color: white;
 }
