--- a/nfs/index.html
+++ b/nfs/index.html
@@ -145,7 +145,7 @@ h5 {
 }
 </style>
 </head>
-<h5>[root@server ~]# i /etc/idmapd.conf
+<h5> <span class="w3-tag w3-wide">[root@server ~]# i /etc/idmapd.conf
 <br># line 5: uncomment and change to your domain name
 <br>Domain = example.com
 <br>[root@server ~]# vi /etc/exports
