--- a/nfs/index.html
+++ b/nfs/index.html
@@ -130,10 +130,10 @@ body, html {
 <!-- Content -->
 <div class="w3-container">
     <h3 class="w3-center w3-padding-64"> <span class="w3-tag w3-wide">Configure NFS SERVER</span></h3>
-    <h5 <span class="w3-tag w3-wide">Configure NFS Server to share directories on your Network.
-This example is based on the environment below./span></h5>
-  <h5 <span class="w3-tag w3-wide">[NFS Server]         |192.0.0.20 | 192.0.0.30|        [NFS Client]/span></h5>
-  <h5 <span class="w3-tag w3-wide">Server.example.com     <--------------------->      Client.example.com/span></h5>
+    <h5 <span class="w3-tag w3-long">Configure NFS Server to share directories on your Network.
+This example is based on the environment below.</h5>
+  <h5 <span class="w3-tag w3-long">[NFS Server]         |192.0.0.20 | 192.0.0.30|        [NFS Client]/span></h5>
+  <h5 <span class="w3-tag w3-long">Server.example.com     <--------------------->      Client.example.com/span></h5>
  
  </div>
 </div> 
@@ -145,7 +145,7 @@ h5 {
 }
 </style>
 </head>
-<h5> <span class="w3-tag w3-wide">[root@server ~]# i /etc/idmapd.conf
+<h5> <span class="w3-tag w3-long">[root@server ~]# i /etc/idmapd.conf
 <br># line 5: uncomment and change to your domain name
 <br>Domain = example.com
 <br>[root@server ~]# vi /etc/exports
