--- a/nfs/index.html
+++ b/nfs/index.html
@@ -132,20 +132,20 @@ body, html {
     <h3 class="w3-center w3-padding-64"> <span class="w3-tag w3-wide">Configure NFS SERVER</span></h3>
     <h5 <span class="w3-tag w3-long">Configure NFS Server to share directories on your Network.
 This example is based on the environment below.</h5>
-  <h5 <span class="w3-tag w3-long">[NFS Server]         |192.0.0.20 | 192.0.0.30|        [NFS Client]/span></h5>
+  <br><h5 <span class="w3-tag w3-long">[NFS Server]         |192.0.0.20 | 192.0.0.30|        [NFS Client]/span></h5>
   <h5 <span class="w3-tag w3-long">Server.example.com     <--------------------->      Client.example.com/span></h5>
  
  </div>
 </div> 
   
 <style>
-h5 {
+p {
   background-color: black;
   color: white;
 }
 </style>
 </head>
-<h5> <span class="w3-tag w3-long">[root@server ~]# i /etc/idmapd.conf
+<p> <span class="w3-tag w3-long">[root@server ~]# i /etc/idmapd.conf
 <br># line 5: uncomment and change to your domain name
 <br>Domain = example.com
 <br>[root@server ~]# vi /etc/exports
@@ -153,7 +153,7 @@ h5 {
 <br>/home 192.0.0.0/24(rw,no_root_squash)
 <br>[root@server ~]# systemctl start rpcbind nfs-server
 <br>[root@server ~]# systemctl enable rpcbind nfs-server
-</h5>
+</p>
 
 
 <!-- Menu Container -->
