--- a/nfs/index.html
+++ b/nfs/index.html
@@ -128,16 +128,17 @@ body, html {
 <div class="w3-sand w3-grayscale w3-large">
      
 <!-- Content -->
-<div class="w3-container">
-    <h3 class="w3-center w3-padding-64"> <span class="w3-tag w3-wide">Configure NFS SERVER</span></h3>
-    <h5 <span class="w3-tag w3-long">Configure NFS Server to share directories on your Network.
+<div style="max-width:1200px">
+
+  <div class="w3-content" style="max-width:1000px">
+    <h5><span class="w3-tag w3-wide">Configure NFS SERVER</span></h5>
+    <h5 class="w3-tag w3-green">Configure NFS Server to share directories on your Network.
 This example is based on the environment below.</h5>
-  <br><h5 <span class="w3-tag w3-long">[NFS Server]         |192.0.0.20 | 192.0.0.30|        [NFS Client]/span></h5>
-  <h5 <span class="w3-tag w3-long">Server.example.com     <--------------------->      Client.example.com/span></h5>
- 
- </div>
-</div> 
+  <h5 <span class="w3-tag w3-green">[NFS Server]  |192.0.0.20 ---------------- 192.0.0.30|      [NFS Client] <br>Server.example.com     <--------------------->      Client.example.com</span></h5>
   
+</div>
+</div>
+
 <style>
 p {
   background-color: black;
@@ -145,13 +146,20 @@ p {
 }
 </style>
 </head>
-<p> <span class="w3-tag w3-long">[root@server ~]# i /etc/idmapd.conf
+<p>[root@server ~]# i /etc/idmapd.conf
+  
 <br># line 5: uncomment and change to your domain name
+<br>
 <br>Domain = example.com
+<br>
 <br>[root@server ~]# vi /etc/exports
+<br>
 <br># write settings for NFS exports
+<br>
 <br>/home 192.0.0.0/24(rw,no_root_squash)
+<br>
 <br>[root@server ~]# systemctl start rpcbind nfs-server
+<br>
 <br>[root@server ~]# systemctl enable rpcbind nfs-server
 </p>
 
