--- a/nfs/index.html
+++ b/nfs/index.html
@@ -138,7 +138,7 @@ This example is based on the environment below.</h5>
   
 </div>
 </div>
-
+<body>
 <style>
 p {
   background-color: black;
@@ -162,7 +162,7 @@ p {
 <br>
 <br>[root@server ~]# systemctl enable rpcbind nfs-server
 </p>
-
+</body>
 
 <!-- Menu Container -->
 
