--- a/nfs/index.html
+++ b/nfs/index.html
@@ -131,10 +131,10 @@ body, html {
 <div style="max-width:1200px">
 
   <div class="w3-content" style="max-width:1000px">
-    <h5><span class="w3-tag w3-wide">Configure NFS SERVER</span></h5>
-    <h5 class="w3-tag w3-green">Configure NFS Server to share directories on your Network.
+    <h5><span class="w3-tag w3-yellow">Configure NFS SERVER</span></h5>
+    <h5 class="w3-tag w3-yellow">Configure NFS Server to share directories on your Network.
 This example is based on the environment below.</h5>
-  <h5 <span class="w3-tag w3-green">[NFS Server]  |192.0.0.20 ---------------- 192.0.0.30|      [NFS Client] <br>Server.example.com     <--------------------->      Client.example.com</span></h5>
+  <h5 <span class="w3-tag w3-yellow">[NFS Server]  |192.0.0.20 ---------------- 192.0.0.30|      [NFS Client] <br>Server.example.com     <--------------------->      Client.example.com</span></h5>
   
 </div>
 </div>
