--- a/nfs/index.html
+++ b/nfs/index.html
@@ -136,7 +136,7 @@ body, html {
 This example is based on the environment below.</h5>
   <h5 <span class="w3-tag w3-black">[NFS Server]  |192.0.0.20 ---------------- 192.0.0.30|      [NFS Client] <br>Server.example.com     <--------------------->      Client.example.com</span></h5>
   <h5><span class="w3-tag w3-black">Server Configuration:-</span></h5>
-<h5><span class="w3-block w3-black">     
+<h5><span class="w3-stretch w3-black">     
 [root@server ~]# vi /etc/idmapd.conf
   
 <br># line 5: uncomment and change to your domain name
