--- a/nfs/index.html
+++ b/nfs/index.html
@@ -132,12 +132,12 @@ body, html {
 
   <div class="w3-content" style="max-width:1000px">
     <h5 class="w3-center w3-padding-64"><span class="w3-tag w3-black">Configure NFS SERVER</span></h5>
-    <h5 class="w3-tag w3-black">Configure NFS Server to share directories on your Network.
-This example is based on the environment below.</h5>
-  <h5 <span class="w3-tag w3-black">[NFS Server]  |192.0.0.20 ---------------- 192.0.0.30|      [NFS Client] <br>Server.example.com     <--------------------->      Client.example.com</span></h5>
+    <p><b>Configure NFS Server to share directories on your Network.
+This example is based on the environment below.<b><p>
+  <h5 <span class="w3-tag yellow">[NFS Server]  |192.0.0.20 ---------------- 192.0.0.30|      [NFS Client] <br>Server.example.com     <--------------------->      Client.example.com</span></h5>
   <h5><span class="w3-tag w3-black">Server Configuration:-</span></h5>
 <h5><span class="w3-stretch w3-black">     
-[root@server ~]# vi /etc/idmapd.conf
+<br>[root@server ~]# vi /etc/idmapd.conf
   
 <br># line 5: uncomment and change to your domain name
 <br>
