--- a/nfs/index.html
+++ b/nfs/index.html
@@ -135,7 +135,7 @@ body, html {
     <p><b>Configure NFS Server to share directories on your Network.
 This example is based on the environment below.<b><p>
   <h5 <span class="w3-tag yellow">[NFS Server]  |192.0.0.20 ---------------- 192.0.0.30|      [NFS Client] <br>Server.example.com     <--------------------->      Client.example.com</span></h5>
-  <h5><span class="w3-tag w3-black">Server Configuration:-</span></h5>
+  <p><b><span class="w3-tag w3-black">Server Configuration:-<b><p>
 <h5><span class="w3-stretch w3-black">     
 <br>[root@server ~]# vi /etc/idmapd.conf
   
