--- a/nfs/index.html
+++ b/nfs/index.html
@@ -134,8 +134,8 @@ body, html {
     <h5 class="w3-center w3-padding-64"><span class="w3-tag w3-black">Configure NFS SERVER</span></h5>
     <p><b>Configure NFS Server to share directories on your Network.
 This example is based on the environment below.<b><p>
-  <h5 <span class="w3-tag yellow">[NFS Server]  |192.0.0.20 ---------------- 192.0.0.30|      [NFS Client] <br>Server.example.com     <--------------------->      Client.example.com</span></h5>
-  <p><b><span class="w3-tag w3-black">Server Configuration:-<b><p>
+  <h5 <span class="w3-tag green">[NFS Server]  |192.0.0.20 ---------------- 192.0.0.30|      [NFS Client] <br>Server.example.com     <--------------------->      Client.example.com</span></h5>
+  <p><b>Server Configuration:-<b><p>
 <h5><span class="w3-stretch w3-black">     
 <br>[root@server ~]# vi /etc/idmapd.conf
   
