--- a/nfs/index.html
+++ b/nfs/index.html
@@ -152,8 +152,7 @@ This example is based on the environment below.<b><p>
 <br>[root@server ~]# systemctl start rpcbind nfs-server
 <br>
 <br>[root@server ~]# systemctl enable rpcbind nfs-server
-</p></span></h5>
-<p>
+</span></h5>
 </div>
 </div>
 
