--- a/nfs/index.html
+++ b/nfs/index.html
@@ -134,9 +134,9 @@ body, html {
     <h5 class="w3-center w3-padding-64"><span class="w3-tag w3-black">Configure NFS SERVER</span></h5>
     <p><b>Configure NFS Server to share directories on your Network.
 This example is based on the environment below.<b><p>
-  <h5 <span class="w3-tag green">[NFS Server]  |192.0.0.20 ---------------- 192.0.0.30|      [NFS Client] <br>Server.example.com     <--------------------->      Client.example.com</span></h5>
+  <h5 <span class="w3-tag w3-green">[NFS Server]  |192.0.0.20 ---------------- 192.0.0.30|      [NFS Client] <br>Server.example.com     <--------------------->      Client.example.com</span></h5>
   <p><b>Server Configuration:-<b><p>
-<h2><span class="w3-stretch w3-black">     
+<h6><span class="w3-stretch w3-black">     
 <br>[root@server ~]# vi /etc/idmapd.conf
   
 <br># line 5: uncomment and change to your domain name
@@ -152,7 +152,7 @@ This example is based on the environment below.<b><p>
 <br>[root@server ~]# systemctl start rpcbind nfs-server
 <br>
 <br>[root@server ~]# systemctl enable rpcbind nfs-server
-</span></h2>
+</span></h6>
 </div>
 </div>
 
