--- a/nfs/index.html
+++ b/nfs/index.html
@@ -83,7 +83,8 @@ body, html {
      <div class="dropdown-content">
       <a href="http://linuxhero.tk/linuxinfo/">Linux Introduction</a>
       <a href="http://linuxhero.tk/linuxdistros/">Linux Distributions</a>
-      <a href="#">Link 3</a>
+       <a href="http://linuxhero.tk/nfs/">Linux Distributions</a>
+      
      </div>
     </div> 
    <div class="dropdown">
@@ -178,10 +179,9 @@ This example is based on the environment below.<b><p>
   
 <p><b>Mount it on fstab so it remains after the system boots.<b><p>
 <br>
-<br>
 <h5><span class="w3-code w3-black">[root@Client ~]# vi /etc/fstab
 <br># add like follows to the end
-<br>server.example.com:/home  /home  nfs     defaults        0 0
+<br>server.example.com:/home  /home  nfs  defaults  0 0
 <br>
 <br>   
 </div>
