--- a/nfs/index.html
+++ b/nfs/index.html
@@ -163,7 +163,7 @@ This example is based on the environment below.<b><p>
 <br>
 <br>[root@Client~]# vi /etc/idmapd.conf
 <br># line 5: uncomment and change to your domain name
-<br>Domain = srv.world
+<br>Domain = example.com
 <br>
 <br>[root@Client~]# systemctl start rpcbind
 <br>
