--- a/nfs/index.html
+++ b/nfs/index.html
@@ -83,7 +83,7 @@ body, html {
      <div class="dropdown-content">
       <a href="http://linuxhero.tk/linuxinfo/">Linux Introduction</a>
       <a href="http://linuxhero.tk/linuxdistros/">Linux Distributions</a>
-       <a href="http://linuxhero.tk/nfs/">Configure NFS</a>
+       <a href="http://linuxhero.tk/nfs/">Configure NFS Server</a>
       
      </div>
     </div> 
