--- a/iscsi/index.html
+++ b/iscsi/index.html
@@ -213,7 +213,7 @@ Created LUN 1.
  </span></h5> 
 <p>Now that we have the name of our initiator from the client system, we enter the ACL section on the server within the TPG.<p>  
 <h5><span class="w3-code w3-black">/iscsi/iqn.20...m:target/tpg1> acls/
-  <br>/iscsi/iqn.20...get/tpg1/acls> create <br>iqn.2020-04.example.com
+  <br>/iscsi/iqn.20...get/tpg1/acls> create iqn.2020-04.example.com
 <br>Created Node ACL for <br>iqn.2020-04.example.com
 <br>Created mapped LUN 1.
 <br>Created mapped LUN 0.
